--- a/CollectorQi/Views/Armazenagem/ESCL021/TransferenciaDepositoPage.xaml
+++ b/CollectorQi/Views/Armazenagem/ESCL021/TransferenciaDepositoPage.xaml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" Title="Transferência de Depósito" x:Class="CollectorQi.Views.TransferenciaDepositoPage" xmlns:local="clr-namespace:CollectorQi;assembly=CollectorQi">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Icon="print.png" Text="Search" Clicked="ToolbarItem_Clicked" x:Name="ToolBarPrint"></ToolbarItem>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
 
         <ScrollView Orientation="Vertical" VerticalOptions="Start">
@@ -50,7 +53,9 @@
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
                                 <Label x:Name="lblDepositoSaida" Text="Depósito de Saída" FontSize="Small" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Start" HorizontalTextAlignment="Start" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" />
-                                <local:CustomEntryText x:Name="edtDepositoSaida" IsReadOnly="false" FontSize="Small" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Keyboard="Plain" Placeholder="Depósito de Saída..." Grid.Row="1" Grid.Column="0" />
+                            
+                                <local:CustomEntryText x:Name="edtDepositoSaida" IsReadOnly="true" FontSize="Small" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Keyboard="Plain" Placeholder="Depósito de Saída..." Grid.Row="1" Grid.Column="0" />
+                             
                                 <Button x:Name="BtnDepositoSaida" android:Button.UseDefaultPadding="true" android:Button.UseDefaultShadow="true" FontSize="Small" VerticalOptions="Start" HorizontalOptions="Start" Image="zoomMini.png" BackgroundColor="Transparent" TextColor="White" BorderRadius="16"
                                         Grid.Row="1" Grid.Column="1" Clicked="OnClick_DepositoSaida" />
                             </Grid>
@@ -68,8 +73,11 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
+                                
                                 <Label x:Name="lblDepositoEntrada" Text="Depósito de Entrada" FontSize="Small" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Start" HorizontalTextAlignment="Start" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" />
-                                <local:CustomEntryText x:Name="edtDepositoEntrada" IsReadOnly="false" FontSize="Small" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Keyboard="Plain" Placeholder="Depósito de Entrada..." Grid.Row="1" Grid.Column="0" />
+                            
+                                <local:CustomEntryText x:Name="edtDepositoEntrada" IsReadOnly="true" FontSize="Small" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Keyboard="Plain" Placeholder="Depósito de Entrada..." Grid.Row="1" Grid.Column="0" />
+                                
                                 <Button x:Name="BtnDepositoEntrada" android:Button.UseDefaultPadding="true" android:Button.UseDefaultShadow="true" FontSize="Small" VerticalOptions="Start" HorizontalOptions="Start" Image="zoomMini.png" BackgroundColor="Transparent" TextColor="White" BorderRadius="16"
                                         Clicked="OnClick_DepositoEntrada" Grid.Row="1" Grid.Column="1" />
                             </Grid>
@@ -77,7 +85,7 @@
                     </StackLayout>
 
                     <StackLayout Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5">
-                        <Frame VerticalOptions="StartAndExpand" HasShadow="true" Margin="10,0,10,0" CornerRadius="5" x:Name="frame3" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
+                        <Frame VerticalOptions="StartAndExpand" HasShadow="true" x:Name="frmLocalizacaoSaida" IsVisible="false"  Margin="10,0,10,0" CornerRadius="5"  OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
@@ -96,7 +104,7 @@
                     </StackLayout>
 
                     <StackLayout Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="5">
-                        <Frame VerticalOptions="StartAndExpand" HasShadow="true" Margin="10,0,10,0" CornerRadius="5" x:Name="frame4" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
+                        <Frame VerticalOptions="StartAndExpand" HasShadow="true" x:Name="frmLocalizacaoEntrada" IsVisible="false" Margin="10,0,10,0" CornerRadius="5"  OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
