--- a/CollectorQi/Views/Armazenagem/ESCL029/ArmazenagemMovimentoReparoPage.xaml
+++ b/CollectorQi/Views/Armazenagem/ESCL029/ArmazenagemMovimentoReparoPage.xaml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:local="clr-namespace:CollectorQi" Title="Movimento Reparo" x:Class="CollectorQi.Views.ArmazenagemMovimentoReparoPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Icon="print.png" Text="Search" Clicked="ToolbarItem_Clicked" x:Name="ToolBarPrint"></ToolbarItem>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <!--<StackLayout BackgroundColor="#4E4E4E">-->
         <StackLayout BackgroundColor="#fff">
