--- a/CollectorQi/Views/Batch/ESCL000/IntegracaoMovtoPage.xaml
+++ b/CollectorQi/Views/Batch/ESCL000/IntegracaoMovtoPage.xaml
@@ -16,8 +16,7 @@
                             <ImageCell Text="{Binding Name}" 
                                        Detail="{Binding SubTitle}" 
                                        ImageSource="{Binding Image}" 
-                                       TextColor="White" 
-                                       DetailColor="#aaaaaa"                                      
+                                       TextColor="Black" DetailColor="{StaticResource NavigationPrimary}"                                    
                                        CommandParameter="{Binding .}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
