--- a/CollectorQi/Views/Armazenagem/ESCL027/GuardaMateriaisDepositoItemListaPage.xaml
+++ b/CollectorQi/Views/Armazenagem/ESCL027/GuardaMateriaisDepositoItemListaPage.xaml
@@ -11,7 +11,7 @@
             <Button x:Name="BtnTipoMovimento" Margin="10,10,10,10" BorderColor="#A5C3FA" FontSize="Small"  MinimumHeightRequest="70" BackgroundColor="{StaticResource TextColorPlaceHolder}" BorderRadius="7"
                     Grid.Row="0" Grid.Column="0" TextColor="#515151" />
 
-            <StackLayout Margin="10,3,10,3" Orientation="Horizontal">
+            <StackLayout Margin="10,0,10,0" Orientation="Horizontal">
                 <TableView HeightRequest="50" >
                     <TableRoot >
                         <TableSection >
@@ -21,7 +21,7 @@
                 </TableView>
             </StackLayout>
 
-            <StackLayout Margin="10,3,10,3" Orientation="Horizontal">
+            <StackLayout Margin="10,0,10,0" Orientation="Horizontal">
                 <TableView HeightRequest="50">
                     <TableRoot>
                         <TableSection>
@@ -32,7 +32,7 @@
             </StackLayout>
 
 
-            <StackLayout Margin="10,3,10,3" Orientation="Horizontal">
+            <StackLayout Margin="10,0,10,0" Orientation="Horizontal">
                 <TableView HeightRequest="50">
                     <TableRoot>
                         <TableSection>
@@ -63,6 +63,7 @@
                                     
                                     <Grid Grid.Row="1" HorizontalOptions="FillAndExpand">
                                         <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
                                             <RowDefinition Height="Auto" />
                                         </Grid.RowDefinitions>
                                         <Grid.ColumnDefinitions>
